; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_uimain.c_ui_destroy_glyph.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_uimain.c_ui_destroy_glyph.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bitmap = type { %struct.bitmap* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ui_destroy_glyph(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.bitmap*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.bitmap*
  store %struct.bitmap* %5, %struct.bitmap** %3, align 8
  %6 = load %struct.bitmap*, %struct.bitmap** %3, align 8
  %7 = icmp ne %struct.bitmap* %6, null
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load %struct.bitmap*, %struct.bitmap** %3, align 8
  %10 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %9, i32 0, i32 0
  %11 = load %struct.bitmap*, %struct.bitmap** %10, align 8
  %12 = call i32 @xfree(%struct.bitmap* %11)
  br label %13

13:                                               ; preds = %8, %1
  %14 = load %struct.bitmap*, %struct.bitmap** %3, align 8
  %15 = call i32 @xfree(%struct.bitmap* %14)
  ret void
}

declare dso_local i32 @xfree(%struct.bitmap*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
